fixed skills icons on mobile

--- a/src/components/about.scss
+++ b/src/components/about.scss
@@ -137,22 +137,28 @@
 		}
 		.skills-cards {
 			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-around;
-			border-top: 3px solid black;
+			// flex-wrap: wrap;
+			// justify-content: space-around;
+			// border-top: 3px solid black;
 			// height:30vh;
 			// width: 100%;
 			// height: 5vh;
 			// height: 4vh; // old code
-			height: 85px;
+			// height: 85px;
+			// align-self: flex-start;
 			// display: none;
+			// align-self: center;
+			align-items: center;
+			align-content: center;
 			img {
-				// width: 11%;
-				width: 8.3%; // old code
-				height: auto;
-				margin: 5px;
+
+				width: 11%;
+				// width: 18.3%; // old code
+				// height: auto;
+				margin: 15px;
 				// display: none;
-				// object-fit: contain;
+					border: 2px solid red;
+					// object-fit: contain;
 			}
 		}
 	}
